<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project Slug</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">This is MY world</string>
    <string name="type_usr">Type Username</string>
    <string name="type_pass">Type Password</string>
    <string name="choose_usr">Choose Username</string>
    <string name="choose_pass">Choose Password</string>
    <string name="repeat_pass">Repeat Password</string>
    <string name="button_login">Login</string>
    <string name="button_regi">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="not_implemented">This activity is not yet implemented</string>
    <string name="title_activity_map">Map</string>
    <string name="loading">Loading</string>
    <string name="check_usr">Check if username is available</string>
    <string name="check_pass">Check if passwords match</string>
    <string name="last_user_default"></string>
    <string name="last_pass_default"></string>
    <string name="last_user">last_usr</string>
    <string name="last_pass">last_pass</string>
    <string name="error_pass_nomatch">The passwords doesn\'t match</string>
    <string name="error_username_taken">The username is not available</string>
    <string name="confirm_target">Want to set %s as target?</string>
    <string name="error_target_exists">You already have a target!</string>
    <string name="new_target">New Target</string>

</resources>
