<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Register" 
    android:orientation="vertical">

    <EditText 
        	android:id="@+id/choose_usr"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:hint="@string/choose_usr"
        	android:layout_gravity="center"/>
    
    <EditText 
        	android:id="@+id/choose_pass"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:hint="@string/choose_pass"
        	android:layout_gravity="center"
        	android:inputType="textPassword"/>
    
    <EditText 
        	android:id="@+id/repeat_pass"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:hint="@string/repeat_pass"
        	android:layout_gravity="center"
        	android:inputType="textPassword"/>
    <Button 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/button_regi"
        	android:layout_gravity="center"
        	android:onClick="register"/>

</LinearLayout>
