<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login"
    android:orientation="vertical"
    android:layout_gravity="center">

    <EditText android:id="@+id/type_usr"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:hint="@string/type_usr"
        	android:layout_gravity="center"
        	android:inputType="textPersonName"/>
    
    <EditText android:id="@+id/type_pass"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:hint="@string/type_pass"
        	android:inputType="textPassword"
        	android:layout_gravity="center" />
    
    <Button android:id="@+id/btn_login"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/button_login"
        	android:onClick="login"
        	android:layout_gravity="center"/>
    
    <Button android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/button_regi"
        	android:onClick="register" 
        	android:layout_gravity="right"/>
    
    <ProgressBar
        	android:id="@+id/load_anim"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	style="@android:style/Widget.ProgressBar.Small"
			android:layout_gravity="center"
			android:visibility="invisible"/>
    
    <TextView
        	android:id="@+id/load_text"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/loading"
        	android:layout_gravity="center"
        	android:visibility="invisible"/>
    
        <TextView
        	android:id="@+id/login_error"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/loading"
        	android:layout_gravity="center"
        	android:visibility="invisible"/>

</LinearLayout>